--- a/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/bin/x86/Debug/DGMU_DEBIT_TICKET_PROJ.vshost.exe.config
+++ b/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/bin/x86/Debug/DGMU_DEBIT_TICKET_PROJ.vshost.exe.config
@@ -4,8 +4,9 @@
     </configSections>
     <connectionStrings>
         <add name="DGMU_DEBIT_TICKET_PROJ.My.MySettings.DGMUConnectionString"
-            connectionString="Data Source=.;Initial Catalog=AGC;User ID=sa;password=p@ssw0rd"
+            connectionString="Data Source=192.168.3.55;Initial Catalog=AGC;User ID=sa;password=p@ssw0rd"
             providerName="System.Data.SqlClient" />
+       
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
