--- a/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/bin/x86/Debug/DGMU_DEBIT_TICKET_PROJ.vshost.exe.config
+++ b/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/bin/x86/Debug/DGMU_DEBIT_TICKET_PROJ.vshost.exe.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="DGMU_DEBIT_TICKET_PROJ.My.MySettings.DGMUConnectionString"
-            connectionString="Data Source=192.168.3.55;Initial Catalog=AGC;User ID=sa;password=p@ssw0rd"
+            connectionString="Data Source=.;Initial Catalog=AGC;User ID=sa;password=p@ssw0rd"
             providerName="System.Data.SqlClient" />
        
     </connectionStrings>
