--- a/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ.vbproj
+++ b/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ.vbproj
@@ -167,12 +167,6 @@
     <Compile Include="frmDebitMemoRequest.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmSupervisorMaintenance.Designer.vb">
-      <DependentUpon>frmSupervisorMaintenance.vb</DependentUpon>
-    </Compile>
-    <Compile Include="frmSupervisorMaintenance.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="frmItemMaintenance.Designer.vb">
       <DependentUpon>frmItemMaintenance.vb</DependentUpon>
     </Compile>
@@ -183,6 +177,12 @@
       <DependentUpon>frmMain.vb</DependentUpon>
     </Compile>
     <Compile Include="frmMain.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSupervisorMaintenance.Designer.vb">
+      <DependentUpon>frmSupervisorMaintenance.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmSupervisorMaintenance.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmViewAttachment.Designer.vb">
@@ -271,14 +271,14 @@
     <EmbeddedResource Include="frmDebitMemoRequest.resx">
       <DependentUpon>frmDebitMemoRequest.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmSupervisorMaintenance.resx">
-      <DependentUpon>frmSupervisorMaintenance.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frmItemMaintenance.resx">
       <DependentUpon>frmItemMaintenance.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSupervisorMaintenance.resx">
+      <DependentUpon>frmSupervisorMaintenance.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmViewAttachment.resx">
       <DependentUpon>frmViewAttachment.vb</DependentUpon>
@@ -367,7 +367,9 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\x1.png" />
