--- a/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ.vbproj
+++ b/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ/DGMU_DEBIT_TICKET_PROJ.vbproj
@@ -131,6 +131,12 @@
   <ItemGroup>
     <Compile Include="Class\Base_C.vb" />
     <Compile Include="Class\DMT_C.vb" />
+    <Compile Include="frmDMDispatch.Designer.vb">
+      <DependentUpon>frmDMDispatch.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmDMDispatch.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DMRequestStatus.Designer.vb">
       <DependentUpon>DMRequestStatus.vb</DependentUpon>
     </Compile>
@@ -236,6 +242,12 @@
       <DependentUpon>repApprovedDM.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Reports\repDebitMemoTotalSummary_Details1.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>repDebitMemoTotalSummary_Details.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reports\repDebitMemoTotalSummary_Details_Branch.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -254,6 +266,12 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="Reports\repDebitMemoTotalSummary_List_Branch.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>repDebitMemoTotalSummary_List_Branch.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reports\repDebitMemoTotalSummary_List_Supervisor.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -262,6 +280,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmDMDispatch.resx">
+      <DependentUpon>frmDMDispatch.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DMRequestStatus.resx">
       <DependentUpon>DMRequestStatus.vb</DependentUpon>
     </EmbeddedResource>
@@ -305,6 +326,10 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>repApprovedDM.vb</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reports\repDebitMemoTotalSummary_Details.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>repDebitMemoTotalSummary_Details1.vb</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\repDebitMemoTotalSummary_Details_Branch.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>repDebitMemoTotalSummary_Details_Branch.vb</LastGenOutput>
@@ -316,6 +341,10 @@
     <EmbeddedResource Include="Reports\repDebitMemoTotalSummary_List.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>repDebitMemoTotalSummary_List.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\repDebitMemoTotalSummary_List_Branch.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>repDebitMemoTotalSummary_List_Branch.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\repDebitMemoTotalSummary_List_Supervisor.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
